fixing alignment for basically everything on content pages

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ nav > div {
   top: 0;
   left: 0;
   transition: 500ms;
-  color: #fff;
+  color: #ffedce;
 }
 nav > div > p {
   font-size: 3vh;
@@ -45,7 +45,7 @@ nav > .nav--cap {
   position: absolute;
   z-index: 1;
   background-color: #000;
-  color: #fff;
+  color: #ffedce;
 }
 nav > .nav--cap > h2 {
   pointer-events: none;
@@ -109,7 +109,7 @@ nav:hover > .nav--sub3 {
   width: 100%;
   height: 100%;
   transition: 750ms;
-  color: white;
+  color: #ffedce;
   left: 0;
   top: 0;
   border: 1px solid;
@@ -144,7 +144,7 @@ nav:hover > .nav--sub3 {
 .disp > .disp--cap {
   z-index: 2;
   background-color: black;
-  color: white;
+  color: #ffedce;
 }
 .disp > .disp--cap > h1 {
   font-family: sans-serif;
@@ -247,6 +247,10 @@ nav:hover > .nav--sub3 {
   opacity: 0.99;
 }
 
+body {
+  background-color: #ffedce;
+}
+
 .content {
   position: relative;
   width: 100vw;
@@ -256,20 +260,37 @@ nav:hover > .nav--sub3 {
   text-align: center;
 }
 .content > header > h3 {
-  font-size: 20vh;
+  font-size: 10vw;
   font-family: "overpass", sans-serif;
   font-weight: 600;
+  padding: 2vh;
   pointer-events: none;
 }
-.content > .photos {
+.content > .photos3 {
   position: absolute;
   top: 25vh;
-  left: 15vw;
-  justify-content: space-between;
   max-width: 70vw;
+  left: 15vw;
+  text-align: center;
 }
-.content > .photos > img {
-  width: 20vw;
+.content > .photos3 > img {
+  width: 23vw;
+}
+.content > .photos2 {
+  position: absolute;
+  top: 25vh;
+  width: 70vw;
+  left: 15vw;
+  text-align: center;
+}
+.content > .photos2 > img {
+  width: 34vw;
+}
+.content > iframe {
+  position: absolute;
+  top: 25vh;
+  width: 70vw;
+  left: 15vw;
 }
 .content > nav {
   position: fixed;
